@@ -62,7 +62,7 @@ data:extend{growthAcceleratorNode,
 			max_sounds_per_type = 3,
 			match_speed_to_activity = true
 		},
-		vehicle_impact_sound = {filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65},
+		impact_category = "metal",
 		resistances = {
 			{
 				type = "fire",
