@@ -33,7 +33,7 @@ data:extend{
 			height = 256,
 			scale = 0.70,
 		},
-		vehicle_impact_sound =	{filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65},
+		impact_category = "metal-large",
 		working_sound = {
 			sound = {
 				{
