@@ -40,7 +40,7 @@ data:extend{
 			}
 		},
 		crafting_categories = {"tiberium-reprocessing"},
-		vehicle_impact_sound = {filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65},
+		impact_category = "metal-large",
 		working_sound = {
 			sound =	{filename = tiberiumInternalName .. "/sound/crusher.ogg", volume = 1.5, speed = 2.0},
 			idle_sound = {filename = "__base__/sound/idle1.ogg"},
